--- a/IntelliGrow-API/IntelliGrow-API/appsettings.json
+++ b/IntelliGrow-API/IntelliGrow-API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TaskManagerDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "IntelliGrow",
+    "DevicesCollectionName": "Devices",
+    "HistoryCollectionName": "History"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
